--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "bower": "1.7.9",
     "express": "^4.16.4",
+   "pg-promise": "",
     "requirejs": "~2.1.14"
   },
   "scripts": {
