--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "dependencies": {
     "bower": "1.7.9",
     "express": "^4.16.4",
-   
+   "promise-pg": "^0.1.1",
     "requirejs": "~2.1.14"
   },
   "scripts": {
