--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "bower": "1.7.9",
     "express": "^4.16.4",
    "promise-pg": "^0.1.1",
-    "requirejs": "~2.1.14"
+    "requirejs": "~2.1.14",
+    "pg": "^4.2.0"
   },
   "scripts": {
     "postinstall": "bower install"
